# lingtai-imap

./: NOTICE  README.md  pyproject.toml
src/lingtai_imap/: __main__.py  account.py  manager.py  server.py
tests/: conftest.py  test_account_reconnect.py  test_lingtai_profile_resources.py  test_onboarding_resources.py  test_search_criteria.py
